# AutoDJ

./: CMakeLists.txt  DJinterface.cpp  FileOut.cpp  FileOut.h  Library.cpp  Library.h  LinkedNode.cpp  LinkedNode.h  List.h  Music.h  Playlist.cpp  Playlist.h  Song.cpp  Song.h  SongLinked.cpp  SongLinked.h  SongList.cpp  SongList.h  TestLab.cpp  TestLib.cpp  TestLib.h  Tester.cpp  discontinuetest.txt  importtest.txt  song.cpp  song.h
